--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>Cheeto is a newly developed client allowing for features not shown anywhere else.</p>
             <p>OVER <span>5000</span> DOWNLOADS</p>
             <div>
-                <a href="ChromaHUD-3.0.jar" download><button type="button" class="content--button"><span></span>Download</button></a>
+                <a href="ah-flipper-V1.5.jar" download><button type="button" class="content--button"><span></span>Download</button></a>
             </div>
         </div>
     </div>
