--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <img src="images/disabled-features.png">
         </div>
         <div class="content">
-            <h1><span>#1</span> Cheat Client</h1>
-            <p>Cheeto is a newly developed client allowing for features not shown anywhere else.</p>
+            <h1><span>#1</span> AH Flipper</h1>
+            <p>Flipper is a newly developed ah flipping mod that allows for an incredibly high volume of profit</p>
             <p>OVER <span>5000</span> DOWNLOADS</p>
             <div>
                 <a href="ah-flipper-V1.5.jar" download><button type="button" class="content--button"><span></span>Download</button></a>
