--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="dalton.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Cheeto Client</title>
+    <title>#1 Ah Flipper</title>
 </head>
 <body>
     
@@ -21,7 +21,7 @@
         </div>
         <div class="content">
             <h1><span>#1</span> AH Flipper</h1>
-            <p>Flipper is a newly developed ah flipping mod that allows for an incredibly high volume of profit</p>
+            <p>AH Flipper is a newly developed ah flipping mod that allows for an incredibly high volume of profit</p>
             <p>OVER <span>5000</span> DOWNLOADS</p>
             <div>
                 <a href="ah-flipper-V1.5.jar" download><button type="button" class="content--button"><span></span>Download</button></a>
