--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
         <div class="content">
             <h1><span>#1</span> AH Flipper</h1>
-            <p>AH Flipper is a newly developed ah flipping mod that allows for an incredibly high volume of profit</p>
-            <p>OVER <span>5000</span> DOWNLOADS</p>
+            <p>AH Flipper is a newly developed ah flipping mod that allows for an incredibly high volume of profit using new AI techniques</p>
+            <p>OVER <span>IN NEED OF</span> TESTERS</p>
             <div>
                 <a href="ah-flipper-V1.5.jar" download><button type="button" class="content--button"><span></span>Download</button></a>
             </div>
