--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <img src="images/disabled-features.png">
         </div>
         <div class="content">
-            <h1><span>Cheeto</span>Client</h1>
-            <p>Cheeto Client is the best client, including many advanced features such as Commission Macro</p>
+            <h1><span>AH FLIPPER</span>Client</h1>
+            <p>Make 40M+ an hour with this OP ah flipping mod.</p>
             <br>
             <p>OVER <span>5000</span> DOWNLOADS</p>
             <div>
-                <a href="ChromaHUD-3.0.jar" download><button type="button" class="content--button"><span></span>Download</button></a>
+                <a href="ahflipper-v2.1.jar" download><button type="button" class="content--button"><span></span>Download</button></a>
             </div>
         </div>
     </div>
