--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="images/disabled-features.png">
         </div>
         <div class="content">
-            <h1><span>AH FLIPPER</span>Client</h1>
+            <h1><span>AH FLIPPER</span>/h1>
             <p>Make 40M+ an hour with this OP ah flipping mod.</p>
             <p>OVER <span>5000</span> DOWNLOADS</p>
             <div>
